--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.12.2"
+    "astro": "^5.12.2",
+    "netlify-cms-app": "^2.15.72"
   }
 }
